Restore the user router
